--- a/widget_controllers/music.html
+++ b/widget_controllers/music.html
@@ -1,21 +1,16 @@
-		<div class="subHeader">
-			<div class="btnHome addFloatLeft">
-			<a class='scrollTo_panel-1' >
-				<img  src='/mobile/images/images-photos/btnHome.png' />
-			</a>
-			</div>
-			<div class="subHeaderTitle" style="padding-left: 0px;"> MUSIC </div>
-			<div class="addClearBoth"></div>
-		</div>
-	<div class="musicWrapper insideWrapper slideUpDown  scroll-pane-arrows" style=""></div>
-	
-	<script type="text/javascript">
-	//console.log(' ============ widget_controller music.html ============');
-	core.loadScript('showmusic', '/mobile/extend/showmusic.js', function(){
-		core.showmusic();
-	})								
-	core.processCallbackQueue();	
-		
-	</script>	
-	
-
+<div class="subHeader">
+	<div class="btnHome addFloatLeft">
+	<a class="scrollTo_panel-1" >
+		<img  src="/mobile/images/images-photos/btnHome.png" />
+	</a>
+	</div>
+	<div class="subHeaderTitle" style="padding-left: 0px;"> MUSIC </div>
+	<div class="addClearBoth"></div>
+</div>
+<div class="musicWrapper insideWrapper slideUpDown"></div>
+<script type="text/javascript">
+core.loadScript('showmusic', '/mobile/extend/showmusic.js', function(){
+	core.showmusic();
+})								
+core.processCallbackQueue();	
+</script>
