--- a/widget_controllers/theaters.html
+++ b/widget_controllers/theaters.html
@@ -78,8 +78,8 @@
 		SEARCH BY ZIP CODE
 	</div>
 </div>
-<div class="theatersContainer "      style='clear:both'   >
-	<div  id='insertZipImage'   style='display:none'  ></div>
+<div class="theatersContainer " style='clear:both'>
+	<div  id='insertZipImage' ></div>
 	<div id='theaters'  class='scroll-pane-arrows slideUpDown insideWrapper'  ></div>
 </div>
 <div  id='storageDiv'   style='display:none'  >
