--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
 	<script>document.write('<link rel="stylesheet" type="text/css" href="/mobile/css/unit' + url_get( 'unit' ) + '.css?cache_buster='  + cache_buster +  '" />')</script>
 	<script>document.write('<script type="text/javascript" language="javascript" src="/mobile/scripts/core.js?cache_buster='   + cache_buster +  '"><\/script>')</script>
 </head> 
-<body > 
+<body> 
 	<div  id="main_container"      >
 		<div id="headerWrapper"    >
 			<div   id="top_area" style="float:left;">
@@ -42,7 +42,7 @@
 								</div>								
 								<div class="headerBtnShare">
 									<a  id="shareThisLink"  >
-										<img  id="share_button" src="/mobile/images/btnShare.gif" />
+										<img  id="share_button" src="/mobile/images/share_open.gif" />
 									</a>
 								</div>
 							</span>					
@@ -75,7 +75,7 @@
 		</div>
 		<div id="footerWrapper">
 				<div style="height: 72px;">
-						<div  id="belt_container"    >
+						<div  id="belt_container"     >
 											<div  id="left_controls" class="addFloatLeft" style="height: 72px;">
 												<div  class="left_controlsInnerDivs "  style="height: 20px;">
 													<a  class="navOverlayLink start"  >
