--- a/app.html
+++ b/app.html
@@ -79,10 +79,10 @@
 											<div  id="left_controls" class="addFloatLeft" style="height: 72px;">
 												<div  class="left_controlsInnerDivs "  style="height: 20px;">
 													<a  class="navOverlayLink start"  >
-														<img class="overlayBtn" src="/mobile/images/aboveNav.gif" style="margin: 6px 2px 0;" />
+														<img class="overlayBtn" src="/mobile/images/aboveNav.gif" style="margin: 6px 2px 0; cursor: pointer;" />
 													</a>
 												</div>
-												<div  class="left_controlsInnerDivs " style="margin-top: 5px; width: 35px;cursor:pointer">
+												<div  class="left_controlsInnerDivs " style="margin-top: 5px; width: 35px; cursor: pointer;">
 														<a  id="scrollLeft"> 
 															<img id="scrollLeftImg"  ></img>
 														</a>
@@ -94,10 +94,10 @@
 											<div  id="right_controls"  class="addFloatLeft" style="height: 72px;">
 												<div  class="right_controlsInnerDivs "  style="height: 20px;">
 													<a   class="navOverlayLink " >
-														<img class="overlayBtn" src="/mobile/images/aboveNav.gif" style="margin: 6px 2px 0;cursor:pointer" />
+														<img class="overlayBtn" src="/mobile/images/aboveNav.gif" style="margin: 6px 2px 0; cursor: pointer;" />
 													</a>
 												</div>
-												<div  class="right_controlsInnerDivs "  style="margin-top: 5px; width: 35px;  ">
+												<div  class="right_controlsInnerDivs " style="margin-top: 5px; width: 35px; cursor: pointer;">
 														<a   id="scrollRight" > 
 															<img id="scrollRightImg" ></img>
 														</a>
