--- a/widget_controllers/videoDetails.html
+++ b/widget_controllers/videoDetails.html
@@ -7,7 +7,7 @@
 		<div class="subHeaderTitle" > 
 			VIDEOS
 		</div>
-		<div   style='padding-right: 4px;padding-top: 6px;float:right'   >
+		<div  id='shareVideoContainer' style='padding-right: 4px;padding-top: 6px;float:right'   >
 				<a class='share_video' >
 						<img  src='/mobile/images/share_video.png?v=2' />
 				</a>	
