--- a/app.html
+++ b/app.html
@@ -27,7 +27,7 @@
 	</script>
 	<script>document.write('<link rel="stylesheet" type="text/css" href="/mobile/css/global.css?cache_buster='   + cache_buster +  '" />')</script>
 	<script>document.write('<link rel="stylesheet" type="text/css" href="/mobile/css/unit' + url_get( 'unit' ) + '.css?cache_buster='  + cache_buster +  '" />')</script>
-	<script>document.write('<script type="text/javascript" language="javascript" src="/mobile/scripts/core.js?cache_buster='   + cache_buster +  '"><\/script>')</script>
+	<script>document.write('<script type="text/javascript" language="javascript" src="/mobile/scripts/core.min.js?cache_buster='   + cache_buster +  '"><\/script>')</script>
 </head> 
 <body> 
 	<div  id="main_container"      >
